{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 4947,
  "lineage": "90ba0435-45c1-c48f-a237-324e280965e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01aba3ea9303eb9d1",
            "arn": "arn:aws:ec2:us-east-1:963527047110:elastic-ip/eipalloc-01aba3ea9303eb9d1",
            "domain": "vpc",
            "id": "eipalloc-01aba3ea9303eb9d1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-194-75-37.compute-1.amazonaws.com",
            "public_ip": "44.194.75.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "reygas-nat-eip-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "reygas-nat-eip-dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "reygas_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:internet-gateway/igw-0ee45b48278862c5b",
            "id": "igw-0ee45b48278862c5b",
            "owner_id": "963527047110",
            "tags": {
              "Environment": "dev",
              "Name": "reygas-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "reygas-igw-dev"
            },
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "reygas_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01aba3ea9303eb9d1",
            "association_id": "eipassoc-0c712deece3b5bea1",
            "connectivity_type": "public",
            "id": "nat-06a06d45a99b5b1bb",
            "network_interface_id": "eni-055ee41361a789493",
            "private_ip": "10.0.3.69",
            "public_ip": "44.194.75.37",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06d08a7f21244a12c",
            "tags": {
              "Environment": "dev",
              "Name": "reygas-nat-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "reygas-nat-dev"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.reygas_igw",
            "aws_subnet.public_subnet",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:route-table/rtb-048eb70f04ee9329d",
            "id": "rtb-048eb70f04ee9329d",
            "owner_id": "963527047110",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06a06d45a99b5b1bb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt-dev"
            },
            "tags_all": {
              "Name": "private-rt-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.reygas_igw",
            "aws_nat_gateway.reygas_nat",
            "aws_subnet.public_subnet",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lambda_subnet_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057f2ae8eee0c9cad",
            "route_table_id": "rtb-048eb70f04ee9329d",
            "subnet_id": "subnet-0b18f3682d19b4999"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.reygas_igw",
            "aws_nat_gateway.reygas_nat",
            "aws_route_table.private_rt",
            "aws_subnet.lambda_subnet_1",
            "aws_subnet.public_subnet",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lambda_subnet_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070839ca520a41436",
            "route_table_id": "rtb-048eb70f04ee9329d",
            "subnet_id": "subnet-0d150b05b6e11a03f"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.reygas_igw",
            "aws_nat_gateway.reygas_nat",
            "aws_route_table.private_rt",
            "aws_subnet.lambda_subnet_2",
            "aws_subnet.public_subnet",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds_subnet_1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c734ba56615c799",
            "route_table_id": "rtb-048eb70f04ee9329d",
            "subnet_id": "subnet-03e35dd69c6de924e"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.reygas_igw",
            "aws_nat_gateway.reygas_nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet",
            "aws_subnet.rds_subnet_1",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rds_subnet_2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6aff54356ea3496",
            "route_table_id": "rtb-048eb70f04ee9329d",
            "subnet_id": "subnet-00fdea1fdb0d5461a"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.reygas_igw",
            "aws_nat_gateway.reygas_nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet",
            "aws_subnet.rds_subnet_2",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:security-group/sg-0ac2894667e254798",
            "description": "Security group for ReyGasExpress Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac2894667e254798",
            "ingress": [],
            "name": "reygas-lambda-sg-dev",
            "name_prefix": "",
            "owner_id": "963527047110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "reygas-lambda-sg-dev"
            },
            "tags_all": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "reygas-lambda-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.reygas_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:security-group/sg-046fec2895dd88ef1",
            "description": "Security group for ReyGasExpress RDS PostgreSQL database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046fec2895dd88ef1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL access from Lambda SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac2894667e254798"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "reygas-rds-sg-dev",
            "name_prefix": "",
            "owner_id": "963527047110",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "reygas-rds-sg-dev"
            },
            "tags_all": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "reygas-rds-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.reygas_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:subnet/subnet-0b18f3682d19b4999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b18f3682d19b4999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963527047110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lambda-subnet-1-dev"
            },
            "tags_all": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lambda-subnet-1-dev"
            },
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_vpc.reygas_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lambda_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:subnet/subnet-0d150b05b6e11a03f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d150b05b6e11a03f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963527047110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lambda-subnet-2-dev"
            },
            "tags_all": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lambda-subnet-2-dev"
            },
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_vpc.reygas_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:subnet/subnet-06d08a7f21244a12c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d08a7f21244a12c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963527047110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet-dev"
            },
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:subnet/subnet-03e35dd69c6de924e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e35dd69c6de924e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963527047110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rds-subnet-1-dev"
            },
            "tags_all": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rds-subnet-1-dev"
            },
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_vpc.reygas_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:subnet/subnet-00fdea1fdb0d5461a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fdea1fdb0d5461a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963527047110",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rds-subnet-2-dev"
            },
            "tags_all": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "rds-subnet-2-dev"
            },
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_vpc.reygas_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "reygas_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:vpc/vpc-071a6de911c9a6548",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c44abbd8e178fccc",
            "default_route_table_id": "rtb-00434225157b3ac1e",
            "default_security_group_id": "sg-061417f14c38b451d",
            "dhcp_options_id": "dopt-0a98db86722142d75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071a6de911c9a6548",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00434225157b3ac1e",
            "owner_id": "963527047110",
            "tags": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "reygas-vpc-dev"
            },
            "tags_all": {
              "Application": "reyGasExpress",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "reygas-vpc-dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:vpc-endpoint/vpce-00b21de5e350f5e9b",
            "dns_entry": [
              {
                "dns_name": "vpce-00b21de5e350f5e9b-qtzpimeu.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00b21de5e350f5e9b-qtzpimeu-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00b21de5e350f5e9b-qtzpimeu-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0771403179ITU5UYFQ6Y"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05116702ZA5IVDVGTKIC"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0299852A4GXRXBHDSCR"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z05116713KER8XAHQDR40"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00b21de5e350f5e9b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a12c7fb86a0df8db",
              "eni-0f644bbddd6d1b1a8"
            ],
            "owner_id": "963527047110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ac2894667e254798"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.23",
                "subnet_id": "subnet-0b18f3682d19b4999"
              },
              {
                "ipv4": "10.0.2.212",
                "subnet_id": "subnet-0d150b05b6e11a03f"
              }
            ],
            "subnet_ids": [
              "subnet-0b18f3682d19b4999",
              "subnet-0d150b05b6e11a03f"
            ],
            "tags": {
              "Name": "cloudwatch-logs-endpoint-dev"
            },
            "tags_all": {
              "Name": "cloudwatch-logs-endpoint-dev"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_subnet.lambda_subnet_1",
            "aws_subnet.lambda_subnet_2",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:vpc-endpoint/vpce-00caa8d7ed2155470",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-00caa8d7ed2155470",
            "owner_id": "963527047110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-048eb70f04ee9329d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "s3-gateway-endpoint-dev"
            },
            "tags_all": {
              "Name": "s3-gateway-endpoint-dev"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.reygas_igw",
            "aws_nat_gateway.reygas_nat",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963527047110:vpc-endpoint/vpce-0d06aa520ab4070fe",
            "dns_entry": [
              {
                "dns_name": "vpce-0d06aa520ab4070fe-90hx6ij9.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d06aa520ab4070fe-90hx6ij9-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d06aa520ab4070fe-90hx6ij9-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03235702J1FWZ5TLFRGX"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d06aa520ab4070fe",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-052d591c3146df9c4",
              "eni-0f51ef99bf4a33505"
            ],
            "owner_id": "963527047110",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0ac2894667e254798"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.11",
                "subnet_id": "subnet-0b18f3682d19b4999"
              },
              {
                "ipv4": "10.0.2.194",
                "subnet_id": "subnet-0d150b05b6e11a03f"
              }
            ],
            "subnet_ids": [
              "subnet-0b18f3682d19b4999",
              "subnet-0d150b05b6e11a03f"
            ],
            "tags": {
              "Name": "secretsmanager-endpoint-dev"
            },
            "tags_all": {
              "Name": "secretsmanager-endpoint-dev"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-071a6de911c9a6548"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_subnet.lambda_subnet_1",
            "aws_subnet.lambda_subnet_2",
            "aws_vpc.reygas_vpc"
          ]
        }
      ]
    }
  ]
}